# lscl

./: .clang-format  CMakeLists.txt  README.md  device.c  device.h  deviceCL.c  deviceCL.h  deviceJson.c  deviceJson.h  error.h  platformCL.c  platformCL.h  platformJson.c  version.c  version.h
src/: CMakeLists.txt  deviceCL.c  deviceCL.h  deviceJson.c  deviceJson.h  error.c  lscl.c  platform.c  platform.h  platformJson.c  platformJson.h
